--- a/Udemy/basics-05-using-the-native-event-object/index.html
+++ b/Udemy/basics-05-using-the-native-event-object/index.html
@@ -18,13 +18,15 @@
     </header>
     <section id="events">
       <h2>Events in Action</h2>
-      <button v-on:click="add(10)">Add 10</button>
-      <button v-on:click="reduce(5)">Subtract 5</button>
+      <button @click="add(10)">Add 10</button>
+      <button @click="reduce(5)">Subtract 5</button>
       <p>Result: {{ counter }}</p>
       <!-- <input type="text" v-bind:value="name"  v-on:input="setName($event, 'Schwarzmüller')"> -->
       <input type="text" v-model="name">
-      <button v-on:click="resetInput()">Reset Input</button>
-      <p>Your Name: {{ name }}</p>
+      <input type="text" v-model="lastName">
+      <!-- <input type="text" v-model="lastName"> -->
+      <button @click="resetInput()">Reset Input</button>
+      <p>Your Name: {{ fullname }}</p>
     </section>
   </body>
 </html>
